--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@vue/cli-plugin-vuex": "4.5.13",
     "@vue/cli-service": "4.5.13",
     "@vue/eslint-config-typescript": "7.0.0",
+    "@vue/runtime-dom": "3.3.4",
     "@vue/test-utils": "1.2.2",
     "eslint": "6.8.0",
     "eslint-plugin-vue": "6.2.2",
