--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "3.15.2",
+    "dayjs": "1.11.9",
     "register-service-worker": "1.7.2",
     "vue": "2.6.14",
     "vue-property-decorator": "9.1.2",
