--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "serve": "cross-env NODE_ENV=development vue-cli-service serve --mode development",
+    "build": "vue-cli-service build --mode production",
+    "build:pro": "cross-env NODE_ENV=production vue-cli-service build --mode production",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "3.15.2",
+    "cross-env": "7.0.3",
     "dayjs": "1.11.9",
+    "dotenv": "16.3.1",
     "register-service-worker": "1.7.2",
     "vue": "2.6.14",
     "vue-property-decorator": "9.1.2",
